<resources>
    <string name="app_name">Labour Mandi</string>
    <string name="logo_name">Logo</string>
    <string name="user_name">Username</string>
    <string name="user_password">Password</string>
    <string name="user_login_button">LOGIN</string>
    <string name="user_login_forgot_password">Forgot Password?</string>
    <string name="common_button">Common Button</string>
    <string name="user_registration_button">REGISTER</string>
    <string name="user_registration_with_google">Login With Google+</string>
    <string name="user_registration_button_with_facebook">Login With Facebook</string>
    <string name="user_registration_button_or">OR</string>
    <string name="user_registration_button_submit_next">NEXT</string>
    <string name="user_sign_up_type">Looking For?</string>
    <string name="looking_for_work">WORK</string>
    <string name="looking_for_worker">WORKER</string>
</resources>
