<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="156dp"
        android:layout_height="118dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="131dp"
        android:layout_marginRight="131dp"
        android:layout_marginBottom="405dp"
        android:contentDescription="@string/logo_name"
        app:srcCompat="@drawable/logo_3" />

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_below="@+id/usernameText"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="75dp"
        android:layout_marginLeft="75dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="75dp"
        android:layout_marginRight="75dp"
        android:autofillHints="@string/user_password"
        android:background="#433434"
        android:drawableLeft="@drawable/ic_lock_black_24dp"
        android:ems="10"
        android:hint="@string/user_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/usernameText"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="75dp"
        android:layout_marginLeft="75dp"
        android:layout_marginTop="360dp"
        android:layout_marginEnd="75dp"
        android:layout_marginRight="75dp"
        android:autofillHints="@string/user_name"
        android:background="#433434"
        android:drawableLeft="@drawable/ic_account_circle_black_24dp"
        android:ems="10"
        android:hint="@string/user_name"
        android:inputType="textPersonName"
        android:textColor="#F8F3F3" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="158dp"
        android:layout_height="47dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="181dp"
        android:layout_marginLeft="181dp"
        android:layout_marginEnd="72dp"
        android:layout_marginRight="72dp"
        android:layout_marginBottom="183dp"
        android:background="#f36f27"
        android:text="@string/user_login_button" />

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="132dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="183dp"
        android:text="@string/user_login_forgot_password" />

</RelativeLayout>