<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registration_page_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login">

    <Button
        android:id="@+id/button"
        android:layout_width="181dp"
        android:layout_height="41dp"
        android:layout_marginTop="44dp"
        android:background="#B23121"
        android:text="@string/user_registration_with_google"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="186dp"
        android:layout_height="40dp"
        android:layout_marginTop="28dp"
        android:background="#2f55a4"
        android:text="@string/user_registration_button_with_facebook"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button3"
        android:layout_width="62dp"
        android:layout_height="48dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/circle_button"
        android:text="@string/user_registration_button_or"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <ScrollView
        android:id="@+id/registration_scroll_view"
        android:layout_width="401dp"
        android:layout_height="346dp"
        android:layout_marginTop="32dp"
        android:fadeScrollbars="false"
        android:scrollbarThumbVertical="@android:color/white"
        android:scrollbarSize="4dip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/sign_up_user_name"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_margin="18dp"
                android:layout_weight="1"
                android:background="@drawable/button_colour"
                android:hint="NAME"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingRight="0dp"
                android:paddingBottom="5dp"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />

            <EditText
                android:id="@+id/date_of_birth"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_margin="18dp"
                android:layout_weight="1"
                android:background="@drawable/button_colour"
                android:hint="Date Of Birth"
                android:inputType="date"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingRight="0dp"
                android:paddingBottom="5dp"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />

            <EditText
                android:id="@+id/sign_up_contact_number"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_margin="18dp"
                android:layout_weight="1"
                android:background="@drawable/button_colour"
                android:hint="Contact No"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingRight="0dp"
                android:paddingBottom="5dp"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />

            <EditText
                android:id="@+id/sign_up_adhar_number"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_margin="18dp"
                android:layout_weight="1"
                android:background="@drawable/button_colour"
                android:hint="Aadhar Card Number"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingRight="0dp"
                android:paddingBottom="5dp"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />

            <EditText
                android:id="@+id/sign_up_pancard_no"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_margin="18dp"
                android:layout_weight="1"
                android:background="@drawable/button_colour"
                android:hint="PAN Number"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingRight="0dp"
                android:paddingBottom="5dp"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />

            <EditText
                android:id="@+id/sign_up_email_id"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_margin="18dp"
                android:layout_weight="1"
                android:background="@drawable/button_colour"
                android:hint="Email-Id"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingRight="0dp"
                android:paddingBottom="5dp"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/registration_button_next"
        android:layout_width="130dp"
        android:layout_height="55dp"
        android:layout_marginLeft="250dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/click_button_background_color"
        android:text="@string/user_registration_button_submit_next"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registration_scroll_view" />

</androidx.constraintlayout.widget.ConstraintLayout>